--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "url": "git+https://github.com/midgarjs/services.git"
   },
   "dependencies": {
-    "@midgar/midgar": "^1.0.0-alpha.3.0",
+    "@midgar/midgar": "^1.0.0-alpha.3.2",
     "@midgar/service": "1.0.0-alpha.1.4",
     "@midgar/utils": "^1.0.0-alpha.1.5",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "uid-safe": "^2.1.5"
@@ -30,10 +31,8 @@
   "devDependencies": {
     "babel-eslint": "^10.0.3",
     "chai": "^4.2.0",
-    "dirty-chai": "^2.0.1",
     "chai-http": "^4.3.0",
-    "ink-docstrap": "^1.3.2",
-    "jsdoc": "^3.6.3",
+    "dirty-chai": "^2.0.1",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.19.1",
@@ -41,10 +40,12 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-sonarjs": "^0.5.0",
     "eslint-plugin-standard": "^4.0.1",
-    "mocha": "^6.2.2",
+    "esm": "^3.2.25",
+    "ink-docstrap": "^1.3.2",
+    "jsdoc": "^3.6.3",
+    "mocha": "^7.0.0",
     "mocha-junit-reporter": "^1.23.1",
     "mocha-sonarqube-reporter": "^1.0.1",
-    "esm": "^3.2.25",
     "nyc": "^15.0.0"
   },
   "author": "Metais Fabien",
