--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@midgar/utils": "^1.0.0-alpha.1.5",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "uid-safe": "^2.1.5"
