--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
     "postinstall": "midgar add @midgar/express",
     "preuninstall": "midgar rm @midgar/express",
     "build-docs": "jsdoc -c ./jsdoc.js ./README.md -t ./node_modules/ink-docstrap/template ./README.md -r ./src/",
-    "test": "mocha --require esm tests/*.js --exit",
+    "test": "mocha --require esm test/*.js --exit",
     "coverage": "nyc -i esm --reporter=lcov --reporter=text-summary npm run test",
     "eslint:ci": "eslint -f json -o reports/.eslint-report.json src/ || exit 0",
-    "test:ci": "mocha --require esm tests/*.js --reportermocha-sonarqube-reporter --reporter-options output=reports/xunit.xml --exit",
+    "test:ci": "mocha --require esm test/*.js --reportermocha-sonarqube-reporter --reporter-options output=reports/xunit.xml --exit",
     "coverage:ci": "nyc -i esm --reporter=lcov npm run test:ci"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/midgarjs/services.git"
+    "url": "git+https://github.com/midgarjs/express.git"
   },
   "dependencies": {
-    "@midgar/midgar": "^1.0.0-alpha.3.3",
-    "@midgar/service": "1.0.0-alpha.1.4",
+    "@midgar/midgar": "^1.0.0-alpha.4.3",
+    "@midgar/service": "^1.0.0-alpha.2.0",
     "@midgar/utils": "^1.0.0-alpha.1.5",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
@@ -36,7 +36,7 @@
     "dirty-chai": "^2.0.1",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-sonarjs": "^0.5.0",
@@ -45,10 +45,17 @@
     "ink-docstrap": "^1.3.2",
     "jsdoc": "^3.6.3",
     "mocha": "^7.0.0",
-    "mocha-junit-reporter": "^1.23.1",
     "mocha-sonarqube-reporter": "^1.0.1",
     "nyc": "^15.0.0"
-  },
+  },  
+  "keywords": [
+    "midgar",
+    "mvcs",
+    "node",
+    "plugin",
+    "express",
+    "http"
+  ],
   "author": "Metais Fabien",
   "license": "MIT"
 }
