--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "@midgar/express",
-  "version": "1.0.0-alpha.1.5",
+  "version": "1.0.0-alpha.1.6",
   "description": "A Midgar plugin to add express service",
   "main": "src/index.js",
   "module": "true",
   "scripts": {
-    "postinstall": "midgar add @midgar/express",
-    "preuninstall": "midgar rm @midgar/express",
     "build-docs": "jsdoc -c ./jsdoc.js ./README.md -t ./node_modules/ink-docstrap/template ./README.md -r ./src/",
     "test": "mocha --require esm test/*.js --exit",
     "coverage": "nyc -i esm --reporter=lcov --reporter=text-summary npm run test",
@@ -19,34 +17,34 @@
     "url": "git+https://github.com/midgarjs/express.git"
   },
   "dependencies": {
-    "@midgar/midgar": "^1.0.0-alpha.4.3",
-    "@midgar/service": "^1.0.0-alpha.2.0",
+    "@midgar/midgar": "git+https://gitea.midgar.io/Midgar/midgar.git",
+    "@midgar/service": "git+https://gitea.midgar.io/Midgar/service.git",
     "@midgar/utils": "^1.0.0-alpha.1.5",
     "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.4",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "helmet": "^3.21.2",
+    "helmet": "^3.22.0",
     "uid-safe": "^2.1.5"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.3",
+    "babel-eslint": "^10.1.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "dirty-chai": "^2.0.1",
     "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.20.0",
-    "eslint-plugin-node": "^11.0.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-sonarjs": "^0.5.0",
     "eslint-plugin-standard": "^4.0.1",
     "esm": "^3.2.25",
     "ink-docstrap": "^1.3.2",
-    "jsdoc": "^3.6.3",
-    "mocha": "^7.0.0",
+    "jsdoc": "^3.6.4",
+    "mocha": "^7.1.1",
     "mocha-sonarqube-reporter": "^1.0.1",
-    "nyc": "^15.0.0"
+    "nyc": "^15.0.1"
   },  
   "keywords": [
     "midgar",
