--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@midgar/express",
-  "version": "1.0.0-alpha.1.6",
+  "version": "1.0.0-beta.1.0",
   "description": "A Midgar plugin to add express service",
   "main": "src/index.js",
   "module": "true",
@@ -17,14 +17,14 @@
     "url": "git+https://github.com/midgarjs/express.git"
   },
   "dependencies": {
-    "@midgar/midgar": "git+https://gitea.midgar.io/Midgar/midgar.git",
-    "@midgar/service": "git+https://gitea.midgar.io/Midgar/service.git",
-    "@midgar/utils": "^1.0.0-alpha.1.5",
+    "@midgar/midgar": "1.0.0-beta.1.0",
+    "@midgar/service": "1.0.0-beta.1.0",
+    "@midgar/utils": "^1.0.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "helmet": "^3.22.0",
+    "helmet": "^3.23.2",
     "uid-safe": "^2.1.5"
   },
   "devDependencies": {
@@ -32,9 +32,9 @@
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "dirty-chai": "^2.0.1",
-    "eslint": "^6.8.0",
+    "eslint": "^7.3.1",
     "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-sonarjs": "^0.5.0",
@@ -42,9 +42,9 @@
     "esm": "^3.2.25",
     "ink-docstrap": "^1.3.2",
     "jsdoc": "^3.6.4",
-    "mocha": "^7.1.2",
+    "mocha": "^8.0.1",
     "mocha-sonarqube-reporter": "^1.0.1",
-    "nyc": "^15.0.1"
+    "nyc": "^15.1.0"
   },
   "keywords": [
     "midgar",
